--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# ENV - TESTNET, MAINNET
+IMTBL_ENVIROMENT = TESTNET 
+
 # MAINNET
 IMTBL_MAINNET_PASSPORT_CLIENT_ID = 
 IMTBL_MAINNET_PASSPORT_LOGIN_REDIRECT_URL = 
